tests/Rules/Aria/Fixtures/invalid/aria_hidden_focus.html.twig
<button aria-hidden="true">Click</button>
